tests/models/struct/unnamed/bool/fail/le.stderr
error: Support condition is alias, default and validate
 --> tests/models/struct/unnamed/bool/fail/le.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
